# sufyaan-autofeature

./: LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
src/autofeature/: __init__.py  categorical.py  cyclical.py  engineer.py  leakage.py  pipeline.py  selector.py
src/sufyaan_autofeature.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_basic.py
