[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sufyaan-autofeature"
version = "0.1.0"
description = "Intelligent automatic feature engineering for tabular ML."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
    { name = "Sufyaan" }
]
keywords = ["machine learning", "feature engineering", "scikit-learn", "tabular", "automl"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "scikit-learn>=1.0",
    "pandas>=1.3",
    "numpy>=1.21",
]

[project.urls]
Homepage = "https://github.com/sufyaannn/autofeature"
Repository = "https://github.com/sufyaannn/autofeature"
Issues = "https://github.com/sufyaannn/autofeature/issues"

[project.optional-dependencies]
dev = ["pytest>=7.0", "build", "twine"]

[tool.setuptools.packages.find]
where = ["src"]
